[package]
name = "day09"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.bench]
debug = true

[dependencies]
aoc_util = { path = "../aoc_util"}
hashbrown = "0.15.2"
itertools = "0.13.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "day09_benchmark"
harness = false
