[package]
name = "day23"
version = "0.1.0"
edition = "2024"
resolver = "2"

[profile.bench]
debug = true

[dependencies]
aoc_util = { path = "../aoc_util"}
hashbrown = "0.15.2"
itertools = "0.10.5"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "day23_benchmark"
harness = false
